# f1-companion

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  run-dev.sh
.agent/: PROJECT.md
.github/workflows/: ci-build-publish.yml  dispatch-smoke-test.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  run-dev.sh
backend/app/: __init__.py  cache.py  config.py  f1signal.py  history.py  jolpica.py  main.py  openf1.py  predictions.py  radio_transcription.py  rate_limit.py  signal_archive.py  telemetry.py  token_tool.py  upgrades.py  weather.py
backend/app/data/: team_upgrades.example.json
backend/tests/: test_f1signal.py  test_health.py  test_history.py  test_jolpica.py  test_openf1.py  test_predictions.py  test_radio_transcription.py  test_signal_archive.py  test_telemetry.py  test_token_tool.py
docs/: ARCHITECTURE.md  DOCUMENTAZIONE_TECNICA.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ArchiveView.tsx  CircuitLayoutMap.tsx  LiveView.tsx  PostRaceView.tsx  PredictionView.tsx  TelemetryChart.tsx  TrackMap.tsx  api.ts  styles.css  types.ts
scripts/ci/: build-images.sh  test-backend.sh  test-frontend.sh  validate-compose.sh
